# jti-ai

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test_citations.py  test_grounding.py
app/: api_keys.py  auth.py  cli.py  core.py  deps.py  logging_config.py  main.py  migrate_knowledge.py  migrate_quiz_bank.py  models_config.py  prompts.py  users.py  utils.py
data/: KIOSK_QA_English.csv  color_results.json  hciot_topics.json  quiz_bank_color_en.json  quiz_bank_color_zh.json  quiz_bank_en.json  quiz_bank_esg_en.json  quiz_bank_esg_zh.json  quiz_bank_jti_zh.json  quiz_bank_zh.json  quiz_results.json
docker/: backend-entrypoint.sh  backend.Dockerfile  frontend-start.sh  frontend.Dockerfile  nginx.conf  nginx.conf.template
docs/: 2026-06-08-atlas-to-documentdb-decision.md  PROMPT_MANAGEMENT.md  color_quiz_implementation_plan.md  conversations_export.md  external-api.md  第三方開源授權與聲明.md  第三方開源軟體清單.md
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
jti_scraper/: README_SCRAPER.md  ploom_faq_scraper.py  scrape_ploom_api.py
scripts/: README_db_sync.md  _mongo_sync_common.py  check_app_key_map.py  create_user.py  export_hospital_education_csv.py  merge_atlas_to_documentdb.py  migrate_color_to_quiz.py  migrate_control_plane_to_system_config.py  migrate_flatten_knowledge_labels.py  migrate_general_to_general_app.py  migrate_hciot_images_to_mongo.py  migrate_hciot_topic_language.py  migrate_prompt_index.py  (+7 more)
(+660 files in other folders)
