[project]
name = "jtai"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "google-genai>=2.10.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.138.1",
    "uvicorn>=0.49.0",
    "python-multipart>=0.0.32",
    "pymongo>=4.17.0",
    "redis>=8.0.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "opencc-python-reimplemented>=0.1.7",
    "lancedb>=0.33.0",
    "httpx>=0.28.1",
    "bcrypt>=5.0.0",
    "PyJWT>=2.13.0",
    "cryptography>=49.0.0",
]

[dependency-groups]
backend-heavy = [
    "numpy==2.4.6",
    "pandas==3.0.3",
]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]
embedding = [
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
]
embedding-heavy = [
    "torch==2.5.1",
    "transformers==4.46.3",
    "accelerate==0.34.2",
    "sentence-transformers==3.3.1",
    "FlagEmbedding==1.3.5",
    "numpy==2.4.6",
]
